applications/bugzilla/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bugzilla
spec:
  replicas: 0
  selector:
    matchLabels:
      app: bugzilla
  template:
    metadata:
      labels:
        app: bugzilla
    spec:
      containers:
        - name: bugzilla-server
